添加生成代码模块

--- a/style/basic.less
+++ b/style/basic.less
@@ -1,11 +1,4 @@
-body,
-html {
-  margin: 0;
-  height: 100%;
-  width: 100%;
-}
-
-#__nuxt {
-  height: 100%;
-  width: 100%;
+//  返回按钮
+.backBtn {
+  color: #3b8070;
 }
