--- a/style/basic.less
+++ b/style/basic.less
@@ -2,3 +2,15 @@
 .backBtn {
   color: #3b8070;
 }
+
+.title {
+  font-family: 'Quicksand', 'Source Sans Pro', -apple-system, BlinkMacSystemFont,
+    'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif;
+  display: block;
+  font-weight: 300;
+  font-size: 50px;
+  color: #35495e;
+  letter-spacing: 1px;
+  margin-bottom: 30px;
+  text-align: center;
+}
